--- a/app/src/main/res/layouts/shared/layout/item_create_match_event.xml
+++ b/app/src/main/res/layouts/shared/layout/item_create_match_event.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:bind="http://schemas.android.com/tools">
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -39,26 +38,44 @@
             android:src="@drawable/ic_swap_horiz_white_24dp"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/switch_sides"
-            android:onClick="@{() -> viewModel.onChangeTeam()}"/>
+            android:onClick="@{b -> viewModel.onChangeTeam(b)}"/>
 
-        <include
-            layout="@layout/headshot"
+        <com.example.kevin.fifastatistics.views.HeadshotView
             android:id="@+id/player_imageview"
-            android:layout_width="50dp"
-            android:layout_height="65dp"
+            android:layout_width="@dimen/headshot_width"
+            android:layout_height="@dimen/headshot_height"
             android:layout_marginEnd="@dimen/medium_margin"
             android:layout_marginTop="@dimen/tiny_margin"
             android:layout_marginBottom="@dimen/medium_margin"
             android:layout_toEndOf="@id/team_imageview"
-            bind:imageUrl="@{viewModel.playerImageUrl}"
-            bind:color="@{viewModel.teamColor}"/>
+            app:footballer="@{viewModel.player}"
+            app:color="@{viewModel.teamColor}"
+            app:onColorAnimationComplete="@{viewModel.onColorAnimationComplete}"/>
+
+        <EditText
+            android:id="@+id/minute_edittext"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignBottom="@id/player_imageview"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:gravity="end"
+            android:hint="0'"
+            android:inputType="number"
+            android:textAppearance="@style/text_small"
+            android:paddingBottom="@dimen/big_margin"
+            android:afterTextChanged="@{(s) -> viewModel.onMinuteUpdated(s)}"
+            app:inputFilter="@{viewModel.minuteInputFilter}"/>
 
         <android.support.v7.widget.SearchView
             android:id="@+id/player_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/player_imageview"
-            android:layout_alignParentTop="true"
+            android:layout_toStartOf="@id/minute_edittext"
+            android:layout_alignBottom="@id/minute_edittext"
+            android:layout_marginBottom="@dimen/player_search_margin_bottom"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             app:textSize="@{@dimen/text_small}"
@@ -72,22 +89,6 @@
             android:onSuggestionClick="@{viewModel.onSuggestionClick}"
             android:onClearListener="@{viewModel.onClearListener}"
             app:textAdapter="@{viewModel.adapter}"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignTop="@id/player_name"
-            android:layout_marginEnd="@dimen/activity_vertical_margin"
-            android:textAppearance="@style/text_white_small"/>
-
-        <ImageView
-            android:layout_width="@dimen/match_event_icon_size"
-            android:layout_height="@dimen/match_event_icon_size"
-            android:layout_alignStart="@id/player_name"
-            android:layout_below="@id/player_name"
-            android:layout_marginTop="@dimen/match_event_icon_margin_top"
-            android:scaleType="centerCrop"/>
 
         <View
             android:layout_width="match_parent"
