--- a/app/src/main/res/layouts/shared/layout/item_match_event.xml
+++ b/app/src/main/res/layouts/shared/layout/item_match_event.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:bind="http://schemas.android.com/tools">
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -26,17 +25,16 @@
             android:scaleType="fitCenter"
             app:imageUrl="@{viewModel.teamImageUrl}"/>
 
-        <include
-            layout="@layout/headshot"
+        <com.example.kevin.fifastatistics.views.HeadshotView
             android:id="@+id/player_imageview"
-            android:layout_width="50dp"
-            android:layout_height="65dp"
+            android:layout_width="@dimen/headshot_width"
+            android:layout_height="@dimen/headshot_height"
             android:layout_marginEnd="@dimen/medium_margin"
             android:layout_marginTop="@dimen/tiny_margin"
             android:layout_marginBottom="@dimen/medium_margin"
             android:layout_toEndOf="@id/team_imageview"
-            bind:imageUrl="@{viewModel.playerImageUrl}"
-            bind:color="@{viewModel.teamColor}"/>
+            app:footballer="@{viewModel.player}"
+            app:color="@{viewModel.teamColor}"/>
 
         <TextView
             android:id="@+id/team_code_textview"
