--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -46,6 +46,10 @@
     <dimen name="leader_image_size">35dp</dimen>
 
     <dimen name="friends_fragment_image_height">130dp</dimen>
+    <dimen name="headshot_radius">25dp</dimen>
+    <dimen name="headshot_width">50dp</dimen>
+    <dimen name="headshot_height">65dp</dimen>
+    <dimen name="player_search_margin_bottom">7dp</dimen>
 
     <!-- Card view properties -->
     <dimen name="card_corner_radius">4dp</dimen>
