--- a/app/src/main/res/layouts/shared/layout/item_create_match_event.xml
+++ b/app/src/main/res/layouts/shared/layout/item_create_match_event.xml
@@ -90,6 +90,17 @@
             android:onClearListener="@{viewModel.onClearListener}"
             app:textAdapter="@{viewModel.adapter}"/>
 
+        <Button
+            android:id="@+id/own_goal_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@id/player_name"
+            android:layout_below="@id/player_name"
+            android:layout_marginBottom="@dimen/medium_margin"
+            android:visibility="@{viewModel.ownGoalSelectorVisibility}"
+            android:text="@string/OG"
+            android:textAppearance="@style/text_bold_small"/>
+
         <com.example.kevin.fifastatistics.views.SelectorTabs
             android:id="@+id/selector_tabs"
             android:layout_width="wrap_content"
@@ -106,10 +117,9 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_below="@id/selector_tabs"
+            android:layout_below="@{viewModel.tabSelectorVisibility == View.GONE ? @id/own_goal_button : @id/selector_tabs}"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@{viewModel.tabSelectorVisibility == View.GONE ? @dimen/medium_margin : 0f}"
             android:visibility="@{viewModel.dividerVisibility}"
             android:background="@color/cardViewHeaderBackground"/>
 
