--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -84,4 +84,17 @@
         <item name="android:textColor">@color/error</item>
     </style>
 
+    <style name="GamePagePill">
+        <item name="android:textColor">@drawable/text_color_selector</item>
+        <item name="android:textAppearance">@style/text_bold_small</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:background">@drawable/pill_selector</item>
+        <item name="android:minWidth">0dp</item>
+        <item name="android:minHeight">0dp</item>
+        <item name="android:paddingStart">12dp</item>
+        <item name="android:paddingEnd">12dp</item>
+        <item name="android:paddingTop">2dp</item>
+        <item name="android:paddingBottom">2dp</item>
+    </style>
+
 </resources>
