--- a/app/src/main/res/layouts/shared/layout/card_create_match_events.xml
+++ b/app/src/main/res/layouts/shared/layout/card_create_match_events.xml
@@ -6,10 +6,13 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.kevin.fifastatistics.viewmodels.card.RecyclerCardViewModel"/>
+            type="com.example.kevin.fifastatistics.viewmodels.card.CreateMatchEventsCardViewModel"/>
         <variable
             name="title"
             type="String"/>
+        <variable
+            name="scrollView"
+            type="android.support.v4.widget.NestedScrollView"/>
     </data>
 
     <LinearLayout
@@ -26,6 +29,19 @@
             android:layout_marginBottom="@dimen/activity_horizontal_margin"
             android:textAppearance="@style/text_bold_grey_small"
             android:text="@{title}"/>
+
+        <com.example.kevin.fifastatistics.views.VisibilityCallbackTextView
+            android:id="@+id/error_message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:layout_marginBottom="@dimen/activity_horizontal_margin"
+            android:maxLines="2"
+            android:visibility="@{viewModel.errorMessageVisibility}"
+            android:text="@string/error_missing_fields"
+            android:textAppearance="@style/text_error"
+            app:onVisibilityChanged="@{(view, vis) -> viewModel.onErrorVisibilityChanged(view, vis, scrollView)}"/>
 
         <android.support.v7.widget.CardView
             android:id="@+id/create_match_events_card_view"
