Set initial state of own goal button when reentering from match list

--- a/app/src/main/res/layouts/shared/layout/item_create_match_event.xml
+++ b/app/src/main/res/layouts/shared/layout/item_create_match_event.xml
@@ -102,6 +102,7 @@
             android:visibility="@{viewModel.ownGoalSelectorVisibility}"
             android:textOn="@string/own_goal"
             android:textOff="@string/own_goal"
+            android:checked="@{viewModel.ownGoalButtonStartingState}"
             android:onCheckedChanged="@{viewModel.onOwnGoalChangedListener}"
             style="@style/GamePagePill"/>
 
