--- a/app/src/main/res/layouts/shared/layout/create_event_header.xml
+++ b/app/src/main/res/layouts/shared/layout/create_event_header.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/cardViewHeaderBackground"
-        android:elevation="@dimen/toolbar_elevation">
+        android:elevation="@dimen/elevation">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/left_image"
