--- a/app/src/main/res/layouts/activities/layout/activity_main.xml
+++ b/app/src/main/res/layouts/activities/layout/activity_main.xml
@@ -35,12 +35,17 @@
                 android:layout_height="match_parent">
             </FrameLayout>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="4dp"
+                android:layout_above="@id/bottom_navigation"
+                android:background="@drawable/top_shadow"/>
+
             <android.support.design.widget.BottomNavigationView
                 android:id="@+id/bottom_navigation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:elevation="8dp"
                 android:background="@color/colorPrimary"
                 app:itemBackground="@color/colorPrimary"
                 app:itemIconTint="@drawable/selector_bottom_nav"
