--- a/app/src/main/res/layouts/activities/layout/activity_main.xml
+++ b/app/src/main/res/layouts/activities/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:bind="http://schemas.android.com/tools">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -18,12 +19,8 @@
                 android:layout_height="wrap_content"
                 android:theme="@style/AppTheme.AppBarOverlay">
 
-                <android.support.v7.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:title="@string/new_match"
-                    app:popupTheme="@style/AppTheme.PopupOverlay" />
+                <include layout="@layout/toolbar_center_title"
+                    android:id="@+id/toolbar_layout"/>
 
             </android.support.design.widget.AppBarLayout>
 
