--- a/app/src/main/res/layouts/useroverview/layout/records_set_item.xml
+++ b/app/src/main/res/layouts/useroverview/layout/records_set_item.xml
@@ -21,7 +21,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            bind:headerLeft="@{headerLeft}">
+            bind:headerLeft="@{headerLeft}"
+            bind:headToHead="@{false}">
         </include>
 
         <include
@@ -30,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginStart="40dp"
             android:layout_below="@id/header"
             bind:title="@{@string/overall}"
             bind:value="@{viewModel.overall}">
@@ -53,7 +54,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:layout_marginEnd="40dp"
             android:layout_below="@id/header"
             bind:title="@{@string/streak}"
             bind:value="@{viewModel.streak}">
