--- a/app/src/main/res/layouts/useroverview/layout/stats_list_item.xml
+++ b/app/src/main/res/layouts/useroverview/layout/stats_list_item.xml
@@ -10,16 +10,14 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/stats_list_item_height">
+        android:layout_height="52dp">
 
         <android.support.percent.PercentFrameLayout
             android:id="@+id/percent"
             android:layout_width="match_parent"
-            android:layout_height="3dp"
+            android:layout_height="2dp"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:layout_marginTop="6dp"
             android:layout_alignParentBottom="true">
 
             <View
@@ -45,20 +43,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:layout_above="@id/percent"
             android:layout_alignParentStart="true"
-            android:textColor="@color/white"
-            android:text="@{viewModel.leftValue}"/>
+            android:textColor="@color/text_main"
+            android:gravity="center"
+            android:text="@{viewModel.leftValue}"
+            android:textAppearance="@style/text_tiny_bold_main"/>
 
         <TextView
             android:id="@+id/stat_against_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:layout_above="@id/percent"
             android:layout_alignParentEnd="true"
-            android:textColor="@color/white"
-            android:text="@{viewModel.rightValue}"/>
+            android:textColor="@color/text_main"
+            android:gravity="center"
+            android:text="@{viewModel.rightValue}"
+            android:textAppearance="@style/text_tiny_bold_main"/>
 
         <TextView
             android:id="@+id/stat_title_text_view"
@@ -66,7 +70,11 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_above="@id/percent"
-            android:text="@{viewModel.title}"/>
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:gravity="center"
+            android:text="@{viewModel.title}"
+            android:textAppearance="@style/text_tiny_grey"/>
 
     </RelativeLayout>
 </layout>
