--- a/app/src/main/res/layouts/shared/layout/card_boxscore.xml
+++ b/app/src/main/res/layouts/shared/layout/card_boxscore.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        xmlns:bind="http://schemas.android.com/tools"
-        xmlns:tools="http://schemas.android.com/tools">
+        xmlns:bind="http://schemas.android.com/tools">
 
     <data>
         <variable
@@ -14,18 +12,15 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_marginBottom="@dimen/activity_horizontal_margin"
-        card_view:cardCornerRadius="@dimen/card_corner_radius"
-        app:cardBackgroundColor="@color/cardViewBackground"
-        android:visibility="@{viewModel.visibility}">
+        android:visibility="@{viewModel.visibility}"
+        style="@style/CardViewStyle">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:orientation="horizontal"
+            android:baselineAligned="false"
             android:weightSum="@{viewModel.totalWeightSum}">
 
             <LinearLayout
