--- a/app/src/main/res/layouts/shared/layout/card_create_match_events.xml
+++ b/app/src/main/res/layouts/shared/layout/card_create_match_events.xml
@@ -47,9 +47,8 @@
             android:id="@+id/create_match_events_card_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/activity_horizontal_margin"
-            card_view:cardCornerRadius="@dimen/card_corner_radius"
-            app:cardBackgroundColor="@color/cardViewBackground">
+            android:layout_marginTop="@dimen/activity_horizontal_margin"
+            style="@style/CardViewStyle">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/updates_recyclerview"
