--- a/app/src/main/res/layouts/shared/layout/card_event_result_header.xml
+++ b/app/src/main/res/layouts/shared/layout/card_event_result_header.xml
@@ -27,12 +27,8 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:layout_marginEnd="@dimen/activity_horizontal_margin"
-            android:layout_marginBottom="@dimen/activity_horizontal_margin"
-            card_view:cardCornerRadius="@dimen/card_corner_radius"
-            app:cardBackgroundColor="@color/cardViewBackground"
-            android:visibility="@{headerViewModel.messageVisibility}">
+            android:visibility="@{headerViewModel.messageVisibility}"
+            style="@style/CardViewStyle">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -48,11 +44,7 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:layout_marginEnd="@dimen/activity_horizontal_margin"
-            android:layout_marginBottom="@dimen/activity_horizontal_margin"
-            card_view:cardCornerRadius="@dimen/card_corner_radius"
-            app:cardBackgroundColor="@color/cardViewBackground">
+            style="@style/CardViewStyle">
 
             <LinearLayout
                 android:layout_width="match_parent"
