--- a/app/src/main/res/layouts/shared/layout/card_update_stats.xml
+++ b/app/src/main/res/layouts/shared/layout/card_update_stats.xml
@@ -48,9 +48,8 @@
             android:id="@+id/update_stats_card_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/activity_horizontal_margin"
-            card_view:cardCornerRadius="@dimen/card_corner_radius"
-            app:cardBackgroundColor="@color/cardViewBackground">
+            android:layout_marginTop="@dimen/activity_horizontal_margin"
+            style="@style/CardViewStyle">
 
             <LinearLayout
                 android:layout_width="wrap_content"
