--- a/app/src/main/res/layouts/shared/layout/card_view_header.xml
+++ b/app/src/main/res/layouts/shared/layout/card_view_header.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:tools="http://schemas.android.com/tools"
+        xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
         <variable
@@ -8,41 +9,58 @@
         <variable
             name="headerRight"
             type="String"/>
+        <variable
+            name="headToHead"
+            type="Boolean"/>
+
+        <import type="android.view.View"/>
     </data>
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingTop="@dimen/record_header_vertical_padding"
-        android:paddingBottom="@dimen/record_header_vertical_padding"
-        android:background="@color/cardViewHeaderBackground">
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin">
 
-        <TextView
-            android:id="@+id/header_left_text"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
+            android:paddingTop="@dimen/record_header_vertical_padding"
+            android:paddingBottom="@dimen/record_header_vertical_padding"
+            android:orientation="horizontal"
+            android:background="@color/cardViewBackground"
+            tools:ignore="RtlSymmetry">
+
+            <TextView
+                android:id="@+id/header_left_text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:paddingStart="@dimen/activity_horizontal_margin"
+                android:gravity="center_vertical"
+                android:text="@{headerLeft}"
+                android:textAllCaps="@{headToHead}"
+                style="@style/CardViewHeaderText"/>
+
+            <TextView
+                android:id="@+id/header_right_text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:paddingEnd="@dimen/activity_horizontal_margin"
+                android:gravity="center_vertical|end"
+                android:text="@{headerRight}"
+                android:textAllCaps="@{headToHead}"
+                style="@style/CardViewHeaderText"/>
+
+        </LinearLayout>
+
+        <View style="@style/Divider"
+            android:layout_gravity="bottom"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:paddingStart="@dimen/activity_horizontal_margin"
-            android:gravity="center_vertical"
-            android:textSize="@dimen/card_header_text_size"
-            android:text="@{headerLeft}"/>
-
-        <TextView
-            android:id="@+id/header_right_text"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
-            android:paddingEnd="@dimen/activity_horizontal_margin"
-            android:gravity="center_vertical|end"
-            android:textSize="@dimen/card_header_text_size"
-            android:text="@{headerRight}"/>
+            android:visibility="@{headToHead ? View.VISIBLE : View.GONE}"/>
 
-    </LinearLayout>
+    </FrameLayout>
+
 </layout>
