--- a/app/src/main/res/layouts/useroverview/layout/records_card_view.xml
+++ b/app/src/main/res/layouts/useroverview/layout/records_card_view.xml
@@ -45,6 +45,10 @@
                     bind:headerLeft="@{@string/matches}">
                 </include>
 
+                <View style="@style/Divider"
+                    android:layout_marginStart="@dimen/activity_horizontal_margin"
+                    android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
+
                 <include
                     layout="@layout/records_set_item"
                     android:id="@+id/series_records"
