--- a/app/src/main/res/layouts/useroverview/layout/stats_list_view_layout.xml
+++ b/app/src/main/res/layouts/useroverview/layout/stats_list_view_layout.xml
@@ -11,7 +11,8 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/activity_vertical_margin">
 
         <TextView
             android:id="@+id/stats_chart_title"
@@ -29,7 +30,8 @@
             layout="@layout/card_view_header"
             android:id="@+id/header"
             bind:headerLeft="@{viewModel.leftHeader}"
-            bind:headerRight="@{viewModel.rightHeader}"/>
+            bind:headerRight="@{viewModel.rightHeader}"
+            bind:headToHead="@{true}"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/stats_recycler_view"
