--- a/app/src/main/res/layouts/shared/layout/card_leaders.xml
+++ b/app/src/main/res/layouts/shared/layout/card_leaders.xml
@@ -33,7 +33,10 @@
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/activity_horizontal_margin"
+                android:layout_marginEnd="@dimen/activity_horizontal_margin"
+                android:paddingBottom="@dimen/activity_vertical_margin">
 
                 <include
                     layout="@layout/card_view_header"
