--- a/app/src/main/res/layouts/useroverview/layout/records_card_view.xml
+++ b/app/src/main/res/layouts/useroverview/layout/records_card_view.xml
@@ -28,9 +28,8 @@
             android:id="@+id/records_card_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/activity_horizontal_margin"
-            card_view:cardCornerRadius="@dimen/card_corner_radius"
-            app:cardBackgroundColor="@color/cardViewBackground">
+            android:layout_marginTop="@dimen/activity_horizontal_margin"
+            style="@style/CardViewStyle">
 
             <LinearLayout
                 android:id="@+id/records_card_view_layout"
