--- a/app/src/main/res/layouts/shared/layout/fragment_match.xml
+++ b/app/src/main/res/layouts/shared/layout/fragment_match.xml
@@ -57,10 +57,9 @@
                         bind:title="@{@string/injuries}"/>
 
                     <include
-                        layout="@layout/card_stats"
-                        bind:stats="@{viewModel.stats}"
-                        bind:title="@{viewModel.username}"
-                        bind:event="@{viewModel.match}"
+                        android:id="@+id/stats_card_layout"
+                        layout="@layout/card_stats_new"
+                        bind:viewModel="@{viewModel.stats}"
                         android:visibility="@{viewModel.statsVisibility}"/>
 
                 </LinearLayout>
