--- a/app/src/main/res/layouts/useroverview/layout/user_overview_data_layout.xml
+++ b/app/src/main/res/layouts/useroverview/layout/user_overview_data_layout.xml
@@ -31,9 +31,8 @@
 
         <include
             android:id="@+id/stats_card_layout"
-            layout="@layout/card_stats"
-            bind:stats="@{viewModel.stats}"
-            bind:title="@{viewModel.name}"/>
+            layout="@layout/card_stats_new"
+            bind:viewModel="@{viewModel.stats}"/>
 
         <include
             layout="@layout/card_leaders"
