--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -100,6 +100,7 @@
         <item name="android:paddingEnd">12dp</item>
         <item name="android:paddingTop">2dp</item>
         <item name="android:paddingBottom">2dp</item>
+        <item name="android:gravity">center</item>
     </style>
 
     <style name="CardViewStyle" parent="CardView">
