--- a/app/src/main/res/layouts/shared/layout/activity_match.xml
+++ b/app/src/main/res/layouts/shared/layout/activity_match.xml
@@ -14,12 +14,9 @@
             android:layout_height="wrap_content"
             android:theme="@style/AppTheme.AppBarOverlay">
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:title="@string/new_match"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
+            <include
+                layout="@layout/toolbar_event"
+                android:id="@id/toolbar_layout"/>
 
         </android.support.design.widget.AppBarLayout>
 
