--- a/app/src/main/res/layouts/shared/layout/card_event_result_header.xml
+++ b/app/src/main/res/layouts/shared/layout/card_event_result_header.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:bind="http://schemas.android.com/tools">
+    xmlns:bind="http://schemas.android.com/tools">
 
     <data>
         <variable
@@ -14,15 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/activity_vertical_margin"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center_horizontal"
-            android:textAppearance="@style/text_bold_grey_small"
-            android:text="@{headerViewModel.date}"/>
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
@@ -41,28 +30,31 @@
 
         </android.support.v7.widget.CardView>
 
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/CardViewStyle">
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:background="@color/cardViewBackground"
+                android:orientation="vertical"
+                android:elevation="@dimen/elevation">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/activity_vertical_margin"
+                    android:layout_gravity="start"
+                    android:gravity="center_horizontal"
+                    android:textAppearance="@style/text_bold_grey_small"
+                    android:text="@{headerViewModel.date}"/>
+
+                <View style="@style/Divider"
+                    android:layout_marginStart="@dimen/activity_horizontal_margin"
+                    android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
 
                 <include
                     layout="@layout/item_event_header_team_score"
                     bind:imageUrl="@{headerViewModel.winnerImageUrl}"
                     bind:name="@{headerViewModel.winnerName}"
                     bind:score="@{headerViewModel.winnerScore}"/>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:background="@color/cardViewHeaderBackground"
-                    android:layout_marginStart="@dimen/activity_horizontal_margin"
-                    android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
 
                 <include
                     layout="@layout/item_event_header_team_score"
@@ -71,8 +63,6 @@
                     bind:score="@{headerViewModel.loserScore}"/>
 
             </LinearLayout>
-
-        </android.support.v7.widget.CardView>
 
     </LinearLayout>
 
