--- a/app/src/main/res/layouts/shared/layout/activity_series.xml
+++ b/app/src/main/res/layouts/shared/layout/activity_series.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
         android:orientation="vertical"
@@ -8,17 +7,9 @@
         android:layout_height="match_parent"
         android:background="@color/colorPrimaryDark">
 
-        <android.support.design.widget.AppBarLayout
-            android:id="@+id/app_bar_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.AppBarOverlay">
-
-            <include
-                layout="@layout/toolbar_event"
-                android:id="@id/toolbar_layout"/>
-
-        </android.support.design.widget.AppBarLayout>
+        <include
+            layout="@layout/toolbar_event"
+            android:id="@id/toolbar_layout"/>
 
         <FrameLayout
             android:id="@+id/content"
