--- a/app/src/main/res/layouts/shared/layout/card_event_result_header.xml
+++ b/app/src/main/res/layouts/shared/layout/card_event_result_header.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:bind="http://schemas.android.com/tools">
+    xmlns:bind="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -13,7 +14,8 @@
         android:layout_height="wrap_content"
         android:background="@color/cardViewBackground"
         android:orientation="vertical"
-        android:elevation="@dimen/elevation">
+        android:elevation="@dimen/elevation"
+        app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlwaysCollapsed">
 
         <FrameLayout
             android:layout_width="match_parent"
