--- a/app/src/main/res/layouts/shared/layout/fragment_series.xml
+++ b/app/src/main/res/layouts/shared/layout/fragment_series.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:bind="http://schemas.android.com/apk/res-auto">
+    xmlns:bind="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -9,41 +10,43 @@
             type="com.example.kevin.fifastatistics.viewmodels.fragment.SeriesFragmentViewModel"/>
     </data>
 
-    <FrameLayout
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="com.example.kevin.fifastatistics.fragments.SeriesFragment">
 
+        <android.support.design.widget.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fitsSystemWindows="true"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlwaysCollapsed"
+            app:onOffsetChangedListener="@{viewModel.headerViewModel.offsetListener}">
+
+            <include
+                layout="@layout/card_event_result_header"
+                bind:headerViewModel="@{viewModel.headerViewModel}"
+                android:visibility="@{viewModel.headerVisibility}"/>
+
+        </android.support.design.widget.AppBarLayout>
+
         <android.support.v4.widget.NestedScrollView
             android:id="@+id/nested_scroll_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingTop="@dimen/activity_vertical_margin"
                 android:orientation="vertical"
-                android:descendantFocusability="blocksDescendants">
+                android:layoutAnimation="@anim/default_layout_animation"
+                android:visibility="@{viewModel.statsVisibility}">
 
                 <include
-                    layout="@layout/card_event_result_header"
-                    bind:headerViewModel="@{viewModel.headerViewModel}"
-                    android:visibility="@{viewModel.headerVisibility}"/>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layoutAnimation="@anim/default_layout_animation"
-                    android:visibility="@{viewModel.statsVisibility}">
-
-                    <include
-                        android:id="@+id/stats_card_layout"
-                        layout="@layout/card_stats_new"
-                        bind:viewModel="@{viewModel.stats}"/>
-
-                </LinearLayout>
+                    android:id="@+id/stats_card_layout"
+                    layout="@layout/card_stats_new"
+                    bind:viewModel="@{viewModel.stats}"/>
 
             </LinearLayout>
 
@@ -58,6 +61,6 @@
             android:gravity="center"
             bind:progressViewModel="@{viewModel}"/>
 
-    </FrameLayout>
+    </android.support.design.widget.CoordinatorLayout>
 
 </layout>
